Add Maven Wrapper, Add Dockerisation, add testcontainers, add logging

--- a/java-order/pom.xml
+++ b/java-order/pom.xml
@@ -114,6 +114,7 @@
 			<version>${lombok.version}</version>
 		</dependency>
 
+		<!-- Log4j2 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
