--- a/java-order/src/main/resources/application.yml
+++ b/java-order/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: order
 
   datasource:
-    url: jdbc:postgresql://${database.host}:${database.port}/order
+    url: jdbc:postgresql://${database.host}:${database.port}/${spring.application.name}
     username: ${database.username}
     password: ${database.password}
   jpa:
@@ -24,3 +24,8 @@ management:
     web:
       exposure:
         include: "*"
+
+# Application
+application:
+  protocol: http
+  host: localhost
