--- a/kotlin-order/src/main/resources/application.yml
+++ b/kotlin-order/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     active: local
 
   datasource:
-    url: jdbc:postgresql://${database.host}:${database.port}/order
+    url: jdbc:postgresql://${database.host}:${database.port}/${spring.application.name}
     username: ${database.username}
     password: ${database.password}
   jpa:
@@ -26,3 +26,8 @@ management:
     web:
       exposure:
         include: "*"
+
+# Application
+application:
+  protocol: http
+  host: localhost
