--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-### Compile
-*/target/
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
 ### IntelliJ IDEA ###
 .idea
@@ -16,20 +16,13 @@
 .springBeans
 .sts4-cache
 
-### Jar files ###
-/docker/files/lib/*.jar
-
 ### NetBeans ###
 /nbproject/private/
-/build/
 /nbbuild/
 /dist/
 /nbdist/
-
 /.nb-gradle/
-/.metadata/
+/build/
 
-### Reports
-jacoco/*
-**/target/
-.DS_Store
+### VS Code ###
+.vscode/
