--- a/java-order/src/main/resources/application.yml
+++ b/java-order/src/main/resources/application.yml
@@ -4,7 +4,8 @@ server:
 spring:
   application:
     name: order
-
+  profiles:
+    active: local
   datasource:
     url: jdbc:postgresql://${database.host}:${database.port}/${spring.application.name}
     username: ${database.username}
