--- a/kotlin-order/pom.xml
+++ b/kotlin-order/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.veben</groupId>
+    <groupId>com.veben.javatokotlin</groupId>
     <artifactId>kotlin-order</artifactId>
     <version>0.0.1</version>
 
