--- a/kotlin-order/docker-compose.yml
+++ b/kotlin-order/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - POSTGRES_DB=order
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=
+      - POSTGRES_PASSWORD=pass
 
   order:
     container_name: order
