Add Gradle compatibility for java-order microservice

--- a/java-order/Dockerfile
+++ b/java-order/Dockerfile
@@ -1,13 +1,13 @@
 # Build stage
-FROM maven:3.6.3-jdk-14 AS build
+FROM gradle:jre14 AS build
 
 ENV SPRING_PROFILES_ACTIVE "docker"
-ENV MVN_OPTIONS "clean package -DskipTests"
+ENV GRADLE_OPTIONS "build -info"
+ENV APP_PATH "/home/app"
 
-COPY src /home/app/src
-COPY pom.xml /home/app
-RUN mvn -f /home/app/pom.xml $MVN_OPTIONS
-
+COPY src "${APP_PATH}/src"
+COPY build.gradle gradle.properties settings.gradle $APP_PATH/
+RUN gradle -p $APP_PATH $GRADLE_OPTIONS
 
 # Extract layers stage
 FROM adoptopenjdk/openjdk14:alpine-jre-nightly as extract
@@ -16,10 +16,12 @@ ARG APP_NAME
 ARG APP_VERSION
 
 ENV SPRING_PROFILES_ACTIVE "docker"
+ENV APP_PATH "/home/app"
 ENV LIB_FOLDER "/opt/${APP_NAME}/lib"
+ENV JAR_FROM_FOLDER "/build/libs"
 ENV JAR_PATH "${LIB_FOLDER}/${APP_NAME}.jar"
 
-COPY --from=build "/home/app/target/${APP_NAME}-${APP_VERSION}.jar" $JAR_PATH
+COPY --from=build "${APP_PATH}${JAR_FROM_FOLDER}/${APP_NAME}-${APP_VERSION}.jar" $JAR_PATH
 
 WORKDIR $LIB_FOLDER
 RUN java -Djarmode=layertools -jar $JAR_PATH extract
