--- a/kotlin-order/gradle.properties
+++ b/kotlin-order/gradle.properties
@@ -5,7 +5,7 @@ spring_boot_version=2.3.0.RELEASE
 kotlin_version=1.3.72
 kotlin_logging_version=1.7.6
 kotlin_option_jvmTarget=11
-main_class_path=com.veben.javatokotlin.kotlin.order.OrderApplication
+main_class_path=com.veben.javatokotlin.kotlin.order.OrderApplicationKt
 spring_dependency_management_version=1.0.9.RELEASE
 springfox_swagger_version=2.9.2
 swagger_annotation_version=1.5.23
